<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="24dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/name_label" android:textSize="18sp" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/student_id_label"
            android:layout_marginTop="8dp" android:textSize="18sp" />

        <Button
            android:id="@+id/btnExplicit"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/btn_start_explicit" android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/btnImplicit"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/btn_start_implicit" android:layout_marginTop="12dp" />

    </LinearLayout>
</ScrollView>
